--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,16 @@
         "lib/**/*.jar"
     ],
     "cSpell.words": [
+        "Amabar",
+        "Arijit",
+        "Hawayein",
+        "Kishor",
+        "Kumar",
+        "Neele",
+        "Paas",
         "Raha",
-        "Wada"
+        "Samjhanwa",
+        "Wada",
+        "Wahi"
     ]
 }
